--- a/src/code.html
+++ b/src/code.html
@@ -881,10 +881,10 @@ AI-generated view based on this keyframe. For products, you can also use Google 
         aiSection.classList.remove('hidden');
       }
       if (aiHeading) {
-        aiHeading.textContent = plan.heading || '';
+       // aiHeading.textContent = plan.heading || '';
       }
       if (aiSubtitle) {
-        aiSubtitle.textContent = plan.subtitle || '';
+        //aiSubtitle.textContent = plan.subtitle || '';
       }
 
       if (aiBullets && aiBulletsWrapper) {
