--- a/src/models/UI elements/processing_status/code.html
+++ b/src/models/UI elements/processing_status/code.html
@@ -8,23 +8,29 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 <script id="tailwind-config">
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              "primary": "#0d93f2",
-              "background-light": "#f5f7f8",
-              "background-dark": "#101b22",
-            },
-            fontFamily: {
-              "display": ["Manrope", "sans-serif"]
-            },
-            borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            "primary": "#0d93f2",
+            "background-light": "#f5f7f8",
+            "background-dark": "#101b22",
+            "surface-dark": "#16232d",
+          },
+          fontFamily: {
+            "display": ["Manrope", "sans-serif"]
+          },
+          borderRadius: {
+            "DEFAULT": "0.25rem",
+            "lg": "0.5rem",
+            "xl": "0.75rem",
+            "full": "9999px"
           },
         },
-      }
-    </script>
+      },
+    }
+  </script>
 <style>
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -38,50 +44,131 @@
   </head>
 <body class="bg-background-light dark:bg-background-dark font-display">
 <div class="relative flex h-screen w-full flex-col">
-<!-- Top App Bar -->
-<div class="flex items-center p-4 pb-2 justify-between bg-background-light dark:bg-background-dark">
-<button class="text-slate-800 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors">
-<span class="material-symbols-outlined text-2xl">arrow_back</span>
-</button>
-<h2 class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Processing Reel</h2>
-<div class="size-10 shrink-0"></div> <!-- Spacer -->
-</div>
-<!-- Main Content -->
-<div class="flex flex-1 flex-col items-center justify-center p-6 text-center">
-<!-- Animated Progress Indicator -->
-<div class="relative flex h-52 w-52 items-center justify-center">
-<svg class="absolute inset-0 h-full w-full transform -rotate-90" viewbox="0 0 100 100">
-<circle class="stroke-current text-slate-200 dark:text-slate-800" cx="50" cy="50" fill="transparent" r="45" stroke-width="6"></circle>
-<circle id="status-circle" class="stroke-current text-primary transition-all duration-500 ease-in-out" cx="50" cy="50" fill="transparent" r="45" stroke-dasharray="282.74" stroke-dashoffset="282.74" stroke-linecap="round" stroke-width="6"></circle>
-</svg>
-<div class="flex flex-col items-center justify-center">
-<span id="status-percent" class="text-5xl font-bold text-slate-900 dark:text-white">0%</span>
-</div>
-</div>
-<!-- Dynamic Status Text -->
-<div class="mt-8 flex flex-col gap-2">
-<p id="status-text" class="text-slate-800 dark:text-slate-100 text-xl font-semibold leading-normal">Structuring key insights...</p>
-<p id="status-stage" class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal">Queued</p>
-</div>
-<div class="mt-12 w-full max-w-sm">
-<!-- Linear Progress Bar (from provided components, adapted) -->
-<div class="flex flex-col gap-3">
-<div class="flex gap-6 justify-between"><p id="status-linear-text" class="text-slate-800 dark:text-white text-base font-medium leading-normal">Analyzing content with Gemini AI...</p></div>
-<div class="rounded-full bg-slate-200 dark:bg-slate-700 h-2">
-<div id="status-linear-bar" class="h-2 rounded-full bg-primary" style="width: 0%;"></div>
-</div>
-</div>
-</div>
-</div>
-<!-- Bottom Actions -->
-<div class="w-full p-4 bg-background-light dark:bg-background-dark">
-<!-- Single Button -->
-<div class="flex px-4 py-3">
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 flex-1 bg-slate-200 dark:bg-slate-800 text-slate-900 dark:text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-slate-300 dark:hover:bg-slate-700 transition-colors">
-<span class="truncate">Cancel</span>
-</button>
-</div>
-</div>
+  <!-- Top App Bar -->
+  <div class="flex items-center p-4 pb-2 justify-between bg-background-light dark:bg-background-dark">
+    <button class="text-slate-800 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors">
+      <span class="material-symbols-outlined text-2xl">arrow_back</span>
+    </button>
+    <h2 class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">
+      Processing Reel
+    </h2>
+    <div class="size-10 shrink-0"></div>
+  </div>
+
+  <!-- Main Content -->
+  <div class="flex flex-1 flex-col items-center justify-center p-6 text-center">
+    <!-- Circular progress indicator -->
+    <div class="relative flex h-48 w-48 items-center justify-center">
+      <svg class="absolute inset-0 h-full w-full" viewBox="0 0 100 100">
+        <circle
+          class="stroke-current text-slate-200 dark:text-surface-dark"
+          cx="50"
+          cy="50"
+          r="45"
+          fill="none"
+          stroke-width="10"
+        ></circle>
+      </svg>
+      <svg class="absolute inset-0 h-full w-full transform -rotate-90" viewBox="0 0 100 100">
+        <circle
+          id="status-circle"
+          class="stroke-current text-primary transition-all duration-500 ease-in-out"
+          cx="50"
+          cy="50"
+          r="45"
+          fill="none"
+          stroke-dasharray="282.74"
+          stroke-dashoffset="282.74"
+          stroke-linecap="round"
+          stroke-width="10"
+        ></circle>
+      </svg>
+      <div class="flex flex-col items-center justify-center">
+        <span id="status-percent" class="text-4xl font-bold text-slate-900 dark:text-white">0%</span>
+      </div>
+    </div>
+
+    <!-- Dynamic status text -->
+    <div class="mt-8">
+      <p
+        id="status-text"
+        class="text-slate-800 dark:text-slate-100 text-xl font-semibold leading-normal"
+      >
+        Structuring key insights...
+      </p>
+      <p
+        id="status-stage"
+        class="text-slate-500 dark:text-slate-400 text-base font-normal leading-normal mt-1"
+      >
+        Queued
+      </p>
+    </div>
+
+    <!-- Step list -->
+    <div class="mt-12 w-full max-w-sm">
+      <ul class="space-y-4">
+        <li class="flex items-center gap-4">
+          <div class="flex size-8 shrink-0 items-center justify-center rounded-full bg-primary text-white">
+            <span class="material-symbols-outlined text-lg">check</span>
+          </div>
+          <p class="text-slate-900 dark:text-white font-medium">Downloading video</p>
+        </li>
+
+        <li class="flex items-center gap-4">
+          <div class="flex size-8 shrink-0 items-center justify-center rounded-full bg-primary text-white">
+            <span class="material-symbols-outlined text-lg">check</span>
+          </div>
+          <p class="text-slate-900 dark:text-white font-medium">Analyzing content with Gemini AI</p>
+        </li>
+
+        <li class="flex items-center gap-4">
+          <div
+            class="flex size-8 shrink-0 items-center justify-center rounded-full border-2 border-primary text-primary"
+          >
+            <svg
+              class="animate-spin h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle
+                class="opacity-25"
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="currentColor"
+                stroke-width="4"
+              ></circle>
+              <path
+                class="opacity-75"
+                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                fill="currentColor"
+              ></path>
+            </svg>
+          </div>
+          <p class="text-slate-900 dark:text-white font-medium">Structuring key insights</p>
+        </li>
+
+        <li class="flex items-center gap-4 opacity-50">
+          <div
+            class="flex size-8 shrink-0 items-center justify-center rounded-full border-2 border-slate-400 dark:border-slate-600"
+          ></div>
+          <p class="text-slate-500 dark:text-slate-400 font-medium">Storing data</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Bottom Actions -->
+  <div class="w-full p-4 bg-background-light dark:bg-background-dark">
+    <div class="flex px-4 py-3">
+      <button
+        class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 flex-1 bg-slate-200 dark:bg-slate-800 text-slate-900 dark:text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-slate-300 dark:hover:bg-slate-700 transition-colors"
+      >
+        <span class="truncate">Cancel</span>
+      </button>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -97,6 +184,12 @@
 
   async function fetchStatus(taskId) {
     const resp = await fetch(`/api/reels/status/${encodeURIComponent(taskId)}`);
+    // If the task_id is unknown (e.g., server restarted or link is stale),
+    // surface this as a special "notFound" state instead of throwing, so
+    // the UI can show a friendly message and stop polling.
+    if (resp.status === 404) {
+      return { notFound: true };
+    }
     if (!resp.ok) throw new Error('Failed to fetch status');
     return resp.json();
   }
@@ -152,6 +245,19 @@
     try {
       const data = await fetchStatus(taskId);
 
+      if (data && data.notFound) {
+        const textEl = document.getElementById('status-text');
+        const stageEl = document.getElementById('status-stage');
+        if (textEl) {
+          textEl.textContent = 'Session expired. Please resubmit the reel.';
+        }
+        if (stageEl) {
+          stageEl.textContent = 'Stage: error';
+        }
+        updateProgressUI(clientProgress, 'error');
+        return;
+      }
+
       const textEl = document.getElementById('status-text');
       if (textEl) {
         textEl.textContent =
@@ -165,13 +271,6 @@
       if (typeof data.progress === 'number') {
         serverProgress = data.progress;
       }
-
-      // Ensure the visual progress is at least the server-reported value
-      if (clientProgress < serverProgress) {
-        clientProgress = serverProgress;
-      }
-
-      updateProgressUI(clientProgress, currentStage);
 
       if (data.status === 'completed' && data.reel_id) {
         // Always route to the generic view first. Users can choose
